sg.tf

resource "aws_security_group" "sg-01" {
  vpc_id = aws_vpc.vpc-01.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-01"
    Environment = "${var.environment}"
  }
}

resource "aws_security_group" "bastion" {
  description = "Allow SSH traffic"
  vpc_id      = aws_vpc.vpc-01.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "bastion_security_group"
    Environment = "${var.environment}"
  }
}
